# nixl

./: README.md  meson.build  meson_options.txt
.github/workflows/: aws_s3_validation.yml
benchmark/nixlbench/contrib/: Dockerfile
docs/: CodeStyle.md
examples/: meson.build
examples/device/ep/csrc/: nixl_ep.cpp
src/api/cpp/: nixl.h  nixl_params.h  nixl_types.h
src/api/cpp/backend/: backend_aux.h  backend_engine.h
src/api/cuda/ucx/: nixl_device.cuh
src/api/python/: _api.py
src/bindings/python/: nixl_bindings.cpp
src/core/: nixl_agent.cpp  nixl_listener.cpp
src/plugins/: meson.build
src/plugins/ucx/: ucx_backend.cpp  ucx_backend.h
src/utils/stream/: metadata_stream.cpp
src/utils/ucx/: device_mem_list.cpp  device_mem_list.h  gpu_xfer_req_h.cpp  gpu_xfer_req_h.h  meson.build  nixl_gdaki_device.cuh  rkey.cpp  rkey.h  ucx_utils.cpp  ucx_utils.h
test/gtest/: common.h  device_api_test.cu  error_handling.cpp  meson.build  test_gdaki_transfer.cu  test_transfer.cpp
test/gtest/device_api/: cuda_ptr.cuh  device_test_base.cu  device_test_base.cuh  device_utils.cu  device_utils.cuh  mem_buffer.cuh  meson.build  signal_test.cu  single_write_test.cu  utils.cu  utils.cuh
test/gtest/device_api/common/: cuda_array.h  device_array.h  device_kernels.cu  device_kernels.cuh  device_test_base.cu  device_test_base.cuh  device_utils.cuh  mem_buffer.h  test_array.h
test/gtest/device_api/tests/: full_write_test.cu  partial_write_test.cu  signal_local_test.cu  signal_post_test.cu  single_write_test.cu  write_test.cu
test/nixl/: gdaki_test.cu  meson.build
(+2 files in other folders)
