# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Device API test sources (common + tests)
device_api_test_sources = files(
    'common/device_kernels.cu',
    'common/device_test_base.cu',
    'tests/single_write_test.cu',
    'tests/partial_write_test.cu',
    'tests/full_write_test.cu',
    'tests/signal_post_test.cu',
    'tests/signal_local_test.cu',
)
